--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - 3000:3000
-    command: ["sh", "-c", "npm run populate:data && npm run start:server"]
+    command: ["bash", "./scripts/entrypoint.sh"]
     volumes:
       - /usr/src/app
     environment:
