--- a/storefront-angular-starter/.graphqlconfig
+++ b/storefront-angular-starter/.graphqlconfig
@@ -3,7 +3,7 @@
     "extensions": {
         "endpoints": {
             "demo": "https://demo.vendure.io/shop-api",
-            "dev": "http://localhost:3000/shop-api"
+            "dev": "http://46.250.237.108:3000/shop-api"
         }
     }
 }
