--- a/novu-notification/my-novu-app/.env
+++ b/novu-notification/my-novu-app/.env
@@ -1,3 +1,3 @@
 # HOST_URL=https://novu-bridge.phatle.dev
 NOVU_SECRET_KEY=5d8e8966bc3060ab827482ed2e4a78f0
-NOVU_BRIDGE_URL=https://novu-bridge.phatle.dev/api/novu
+NOVU_BRIDGE_URL=http://46.250.237.108:4000//api/novu
