--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,8 +38,7 @@ services:
       dockerfile: Dockerfile.server
     ports:
       - 4000:4000
-    # command: ["bash", "./scripts/on-docker.sh"]
-    command: ["npm", "run", "start"]
+    command: ["bash", "./scripts/on-docker.sh"]
     volumes:
       - /usr/src/app
   client:
