[UPDATE] Upgrade Angular + imlement FCM

--- a/storefront-angular-starter/package.json
+++ b/storefront-angular-starter/package.json
@@ -18,17 +18,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.4",
+    "@angular/animations": "^16.2.12",
     "@angular/cdk": "^16.0.3",
-    "@angular/common": "^16.0.4",
-    "@angular/compiler": "^16.0.4",
-    "@angular/core": "^16.0.4",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/fire": "^16.0.0",
     "@angular/forms": "^16.0.4",
-    "@angular/platform-browser": "^16.0.4",
-    "@angular/platform-browser-dynamic": "^16.0.4",
-    "@angular/platform-server": "^16.0.4",
-    "@angular/router": "^16.0.4",
-    "@angular/service-worker": "^16.0.4",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/platform-server": "^16.2.12",
+    "@angular/router": "^16.2.12",
+    "@angular/service-worker": "^16.2.12",
     "@apollo/client": "^3.7.15",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
@@ -46,22 +47,22 @@
     "graphql": "^16.6.0",
     "photoswipe": "^5.3.4",
     "primeng": "^16.9.1",
-    "rxjs": "~6.6.3",
+    "rxjs": "^6.6.7",
     "tslib": "^2.4.0",
     "utf-8-validate": "^5.0.10",
     "ws": "^8.18.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.5",
+    "@angular-devkit/build-angular": "^16.2.16",
     "@angular-eslint/builder": "16.1.0",
     "@angular-eslint/eslint-plugin": "16.1.0",
     "@angular-eslint/eslint-plugin-template": "16.1.0",
     "@angular-eslint/schematics": "16.1.0",
     "@angular-eslint/template-parser": "16.1.0",
-    "@angular/cli": "^16.0.5",
-    "@angular/compiler-cli": "^16.0.4",
-    "@angular/language-service": "^16.0.4",
+    "@angular/cli": "^16.2.16",
+    "@angular/compiler-cli": "^16.2.12",
+    "@angular/language-service": "^16.2.12",
     "@graphql-codegen/add": "^3.2.1",
     "@graphql-codegen/cli": "^2.14.0",
     "@graphql-codegen/fragment-matcher": "^3.3.1",
@@ -73,18 +74,18 @@
     "@types/graphql": "^14.0.5",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "^15.3.1",
+    "@types/node": "^15.14.9",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "autoprefixer": "^10.4.13",
     "codelyzer": "^6.0.0",
     "eslint": "^8.44.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "^5.4.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
+    "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "ng-packagr": "^16.0.1",
     "postcss": "^8.4.18",
