--- a/storefront-angular-starter/angular.json
+++ b/storefront-angular-starter/angular.json
@@ -23,7 +23,8 @@
               "src/robots.txt",
               "src/assets",
               "src/storefront-config.json",
-              "src/manifest.json"
+              "src/manifest.json",
+              "src/firebase-messaging-sw.js"
             ],
             "styles": [
               "src/styles/styles.scss",
