--- a/storefront-angular-starter/package.json
+++ b/storefront-angular-starter/package.json
@@ -46,6 +46,7 @@
     "express": "^4.15.2",
     "graphql": "^16.6.0",
     "photoswipe": "^5.3.4",
+    "primeflex": "^3.3.1",
     "primeng": "^16.9.1",
     "rxjs": "^6.6.7",
     "tslib": "^2.4.0",
