[UPDATE] Push notification 80%

--- a/my-special-shop/.env
+++ b/my-special-shop/.env
@@ -9,9 +9,9 @@ DATABASE_HOST=localhost
 DATABASE_NAME=vendure
 
 # prod: 5432 / local: 5433
-DATABASE_PORT=5432
+DATABASE_PORT=5433
 DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=password
+DATABASE_PASSWORD=I!l8vP-S@8;;hX;hL4ZcD41]2HDy+gHl
 DB_SCHEMA=public
 
 NOVU_API_KEY=5d8e8966bc3060ab827482ed2e4a78f0
