--- a/storefront-angular-starter/package.json
+++ b/storefront-angular-starter/package.json
@@ -3,12 +3,13 @@
   "version": "0.3.1",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --port 4200 --disable-host-check",
+    "start": "ng serve --host 0.0.0.0 --port 4200",
     "build": "ng build",
     "analyze-prod-bundle": "ng build --prod --statsJson=true && webpack-bundle-analyzer dist/browser/stats.json",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "generate-codegen": "graphql-codegen",
     "generate-types": "gql-gen --config codegen.yml",
     "dev:ssr": "ng run reference-storefront:serve-ssr",
     "serve:ssr": "node dist/server/main.js",
@@ -68,6 +69,7 @@
     "@graphql-codegen/cli": "^2.14.0",
     "@graphql-codegen/fragment-matcher": "^3.3.1",
     "@graphql-codegen/typescript": "^2.8.2",
+    "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@graphql-codegen/typescript-operations": "^2.5.7",
     "@nguniversal/builders": "^16.0.2",
     "@types/compression": "^1.7.0",
