--- a/storefront-angular-starter/.graphqlconfig
+++ b/storefront-angular-starter/.graphqlconfig
@@ -2,8 +2,8 @@
     "schemaPath": "./schema.graphql",
     "extensions": {
         "endpoints": {
-            "demo": "https://demo.vendure.io/shop-api",
-            "dev": "http://vendure-dev.innity.com.my:3000/shop-api"
+            "demo": "http://localhost:3000/shop-api",
+            "dev": "http://localhost:3000/shop-api"
         }
     }
 }
