[UPDATE] Add subject to notification

--- a/novu-notification/my-novu-app/.env
+++ b/novu-notification/my-novu-app/.env
@@ -1,3 +1,3 @@
 HOST_URL=http://vendure-dev.innity.com.my:4000
 NOVU_SECRET_KEY=5d8e8966bc3060ab827482ed2e4a78f0
-NOVU_BRIDGE_URL=http://vendure-dev.innity.com.my:4000/api/novu
+NOVU_BRIDGE_URL=https://fc3ca10d-1534-4827-8eb4-3b2fb176f091.novu.sh/api/novu
